--- a/css/styles.css
+++ b/css/styles.css
@@ -1,33 +1,25 @@
-#container {
-    background-color: #f5f7fa;
-    border: 6px solid #5be7c4;
-    border-radius: 25px;
-    padding: 20px;
-    width: 100%;
-    height: 100%;
-    display: inline-block;
-    align-items: center;
-}
-
 body {
-    background-image: linear-gradient(to right, #7a57d1, #4fc1e9);
-    font-family: 'Baloo Da 2', cursive;
-    font-size: 1.3em;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-    display: flex;
+  background-image: linear-gradient(to right, #7a57d1, #4fc1e9);
+  font-family: 'Baloo Da 2', cursive;
+  font-size: 1.2em;
 }
-
+#container1 {
+  background-color: #f5f7fa;
+}
 #btn {
-    background-color: #5be7c4;
-    border: none;
-    border-radius: 10px;
-    color: #7a57d1;
-    padding: 15px 15px;
-    text-decoration: none;
-    font-size: .9em;
-    font-weight: bold;
+  background-color: #0ccaf0;
+  border-radius: 5px;
+  border-color: #987ae2;
+  color: #987ae2;
+  padding: 10px 10px;
+  font-size: 0.9em;
+  font-weight: bold;
 }
-
-/* Color Palette Inspo: https://colorsinspo.com/color-palettes/2 */
+/* MEDIA QUERIES
+Extra small devices (portrait phones, less than 576px)
+No media query since this is the default in Bootstrap */
+/* Small devices (portrait phones, 320px and up) */
+/* Small devices (landscape phones, 576px and up) */
+/* Medium devices (tablets, 768px and up) */
+/* Large devices (desktops, 992px and up) */
+/* Extra large devices (large desktops, 1200px and up) */
